--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
     <script src="./js/task-2.js"></script>
     <script src="./js/task-3.js"></script>
   </head>
-  <body></body>
+  <body>
+    <h1>goit-js-hw-03</h1>
+    <p>GoIT Full Stack Developer Kursu Javascript Bölümü Ödev 3</p>
+  </body>
 </html>
